@@ -12,6 +12,7 @@
 //
 // **********************************************************************
 
+#include <IceUtil/Time.h>
 #include <Ice/LoggerI.h>
 
 using namespace std;
@@ -20,7 +21,8 @@ using namespace IceInternal;
 
 IceUtil::Mutex Ice::LoggerI::_globalMutex;
 
-Ice::LoggerI::LoggerI(const string& prefix)
+Ice::LoggerI::LoggerI(const string& prefix, bool timestamp) : 
+    _timestamp(timestamp)
 {
     if(!prefix.empty())
     {
@@ -32,7 +34,14 @@ void
 Ice::LoggerI::trace(const string& category, const string& message)
 {
     IceUtil::Mutex::Lock sync(_globalMutex);
-    string s = "[ " + _prefix + category + ": " + message + " ]";
+
+    string s = "[ ";
+    if(_timestamp)
+    {
+	s += IceUtil::Time::now().toString() + " ";
+    }
+    s += _prefix + category + ": " + message + " ]";
+
     string::size_type idx = 0;
     while((idx = s.find("\n", idx)) != string::npos)
     {
@@ -46,12 +55,20 @@ void
 Ice::LoggerI::warning(const string& message)
 {
     IceUtil::Mutex::Lock sync(_globalMutex);
-    cerr << _prefix  << "warning: " << message << endl;
+    if(_timestamp)
+    {
+	cerr << IceUtil::Time::now().toString() << " ";
+    }
+    cerr << _prefix << "warning: " << message << endl;
 }
 
 void
 Ice::LoggerI::error(const string& message)
 {
     IceUtil::Mutex::Lock sync(_globalMutex);
-    cerr  << _prefix << "error: " << message << endl;
+    if(_timestamp)
+    {
+	cerr << IceUtil::Time::now().toString() << " ";
+    }
+    cerr << _prefix << "error: " << message << endl;
 }
