@@ -1,6 +1,12 @@
 Changes since version 1.0.1
 ---------------------------
 
+- Added timestamps to the default Ice logger. You can enable
+  timestamps by setting the `Ice.Logger.Timestamp' property to a value
+  larger than zero. By default timestamps are disabled.
+
+- Added IceUtil::Time::toString() to convert a time to a string.
+
 - Fixed a bug in Freeze::DBEnvironment which caused the sync method to
   hang.
 
